# CaliComp

./: .env.example  .gitignore  README.md  docker-compose.yml  test_email.py  test_forecast.py  test_p2.py
backend/: Dockerfile  logfile  requirements.txt  setup_db.ps1
backend/alembic/: env.py
backend/alembic/versions/: 9e32029f9fff_initial_schema.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  routes.py
backend/app/services/: __init__.py  email_fetcher.py  email_parser.py  email_pipeline.py  engine_service.py  gmail_auth.py  ocr_service.py
backend/demo_files/: hdfc_statement.txt  petty_cash_receipt.txt  sharma_invoice.json
backend/scripts/: seed.py
data/sample/: demo_transactions.csv
docs/: architecture.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/public/: index.html
frontend/src/: App.jsx  App.tsx  index.css  main.tsx  mockData.ts  types.ts
frontend/src/context/: NotificationContext.tsx  PlanContext.tsx  SettingsContext.tsx  ThemeContext.tsx  ToastContext.tsx
frontend/src/hooks/: useMockTransactions.ts
frontend/src/pages/: Login.tsx  (+16 more)
scripts/: setup.sh
sdk/: pyproject.toml
sdk/calicomp/: __init__.py
sdk/calicomp/actions/: __init__.py  email_generator.py
sdk/calicomp/explainability/: __init__.py  explainer.py
sdk/calicomp/forecast/: __init__.py  forecast_model.py
sdk/calicomp/interfaces/: __init__.py  engine.py
sdk/calicomp/liquidity/: __init__.py  runway.py
sdk/calicomp/solver/: __init__.py  prioritizer.py
shared/types/: transaction.ts
(+37 files in other folders)
